Entrega 2/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID addProcedureDir SEMICOLON cicloVars cicloFuncion MAIN bloque
Rule 2     addProcedureDir -> <empty>
Rule 3     cicloVars -> vars cicloVars
Rule 4     cicloVars -> <empty>
Rule 5     vars -> createVariableDir VAR auxVar1
Rule 6     createVariableDir -> <empty>
Rule 7     auxVar1 -> idVars COLON tipo addTypeGlobal SEMICOLON
Rule 8     addTypeGlobal -> <empty>
Rule 9     idVars -> ID addVariableDir ambIdVars
Rule 10    addVariableDir -> <empty>
Rule 11    ambIdVars -> COMMA idVars
Rule 12    ambIdVars -> <empty>
Rule 13    tipo -> INT ambAuxTipo1
Rule 14    tipo -> BOOL ambAuxTipo1
Rule 15    tipo -> STRING ambAuxTipo1
Rule 16    tipo -> FLOAT ambAuxTipo1
Rule 17    tipo -> CHAR ambAuxTipo1
Rule 18    ambAuxTipo1 -> LBRACKET CTEINT RBRACKET
Rule 19    ambAuxTipo1 -> <empty>
Rule 20    bloque -> LBRACE cicloVarsMain cicloBloque RBRACE
Rule 21    cicloVarsMain -> varsMain cicloVarsMain
Rule 22    cicloVarsMain -> <empty>
Rule 23    varsMain -> createVariableDirMain VAR auxVar1Main
Rule 24    createVariableDirMain -> <empty>
Rule 25    auxVar1Main -> idVarsMain COLON tipo addTypeGlobalMain SEMICOLON
Rule 26    addTypeGlobalMain -> <empty>
Rule 27    idVarsMain -> ID addVariableDirMain ambIdVarsMain
Rule 28    addVariableDirMain -> <empty>
Rule 29    ambIdVarsMain -> COMMA idVarsMain
Rule 30    ambIdVarsMain -> <empty>
Rule 31    cicloBloque -> estatuto cicloBloque
Rule 32    cicloBloque -> <empty>
Rule 33    estatuto -> asignacion
Rule 34    estatuto -> condicion
Rule 35    estatuto -> escritura
Rule 36    estatuto -> lectura
Rule 37    estatuto -> llamada
Rule 38    estatuto -> ciclo
Rule 39    asignacion -> ID auxAsignacion1 EQUALA exp SEMICOLON
Rule 40    auxAsignacion1 -> LBRACKET exp RBRACKET
Rule 41    auxAsignacion1 -> <empty>
Rule 42    escritura -> PRINT LPAREN auxEscritura1 RPAREN SEMICOLON
Rule 43    auxEscritura1 -> auxEscritura2 ambAuxEscritura1
Rule 44    ambAuxEscritura1 -> COMMA auxEscritura1
Rule 45    ambAuxEscritura1 -> <empty>
Rule 46    auxEscritura2 -> exp
Rule 47    auxEscritura2 -> CTESTRING
Rule 48    expresion -> exp auxExpresion exp
Rule 49    expresion -> <empty>
Rule 50    auxExpresion -> GTHAN
Rule 51    auxExpresion -> LTHAN
Rule 52    auxExpresion -> NOTEQUAL
Rule 53    auxExpresion -> GETHAN
Rule 54    auxExpresion -> LETHAN
Rule 55    auxExpresion -> EQUAL
Rule 56    condicion -> IF LPAREN expresion RPAREN bloque auxCondicion
Rule 57    auxCondicion -> ELSE bloque
Rule 58    auxCondicion -> <empty>
Rule 59    exp -> cicloExp
Rule 60    cicloExp -> termino ambExp
Rule 61    ambExp -> auxExp cicloExp
Rule 62    ambExp -> <empty>
Rule 63    auxExp -> PLUS
Rule 64    auxExp -> MINUS
Rule 65    termino -> cicloTermino
Rule 66    cicloTermino -> factor ambCicloTermino
Rule 67    ambCicloTermino -> auxTermino cicloTermino
Rule 68    ambCicloTermino -> <empty>
Rule 69    auxTermino -> MULTI
Rule 70    auxTermino -> DIVIDE
Rule 71    factor -> LPAREN exp RPAREN
Rule 72    factor -> auxFactor varcte
Rule 73    auxFactor -> auxExp
Rule 74    auxFactor -> <empty>
Rule 75    varcte -> ID auxVarcte
Rule 76    varcte -> CTEINT
Rule 77    varcte -> CTEFLOAT
Rule 78    varcte -> CTECHAR
Rule 79    varcte -> CTEBOOL
Rule 80    varcte -> CTESTRING
Rule 81    auxVarcte -> LPAREN exp RPAREN
Rule 82    auxVarcte -> LBRACKET exp LBRACKET
Rule 83    auxVarcte -> <empty>
Rule 84    cicloFuncion -> funcion cicloFuncion
Rule 85    cicloFuncion -> <empty>
Rule 86    funcion -> FUNCTION tipo ID addProcDirectoryFunc LPAREN auxFunction RPAREN bloque
Rule 87    addProcDirectoryFunc -> <empty>
Rule 88    auxFunction -> parametros
Rule 89    auxFunction -> <empty>
Rule 90    parametros -> auxParametros
Rule 91    auxParametros -> tipo ID ambAuxParametros
Rule 92    ambAuxParametros -> COMMA auxParametros
Rule 93    ambAuxParametros -> <empty>
Rule 94    ciclo -> WHILE LPAREN expresion RPAREN bloque
Rule 95    llamada -> ID LPAREN auxLlamada RPAREN SEMICOLON
Rule 96    auxLlamada -> argumentos
Rule 97    auxLlamada -> <empty>
Rule 98    argumentos -> auxArgumentos1
Rule 99    argumentos -> <empty>
Rule 100   auxArgumentos1 -> exp ambAuxArgumentos1
Rule 101   ambAuxArgumentos1 -> COMMA auxArgumentos1
Rule 102   ambAuxArgumentos1 -> <empty>
Rule 103   lectura -> READ LPAREN ID RPAREN SEMICOLON

Terminals, with rules where they appear

BOOL                 : 14
CHAR                 : 17
COLON                : 7 25
COMMA                : 11 29 44 92 101
CTEBOOL              : 79
CTECHAR              : 78
CTEFLOAT             : 77
CTEINT               : 18 76
CTESTRING            : 47 80
DIVIDE               : 70
ELSE                 : 57
EQUAL                : 55
EQUALA               : 39
FLOAT                : 16
FUNCTION             : 86
GETHAN               : 53
GTHAN                : 50
ID                   : 1 9 27 39 75 86 91 95 103
IF                   : 56
INT                  : 13
LBRACE               : 20
LBRACKET             : 18 40 82 82
LETHAN               : 54
LPAREN               : 42 56 71 81 86 94 95 103
LTHAN                : 51
MAIN                 : 1
MINUS                : 64
MULTI                : 69
NOTEQUAL             : 52
PLUS                 : 63
PRINT                : 42
PROGRAM              : 1
RBRACE               : 20
RBRACKET             : 18 40
READ                 : 103
RPAREN               : 42 56 71 81 86 94 95 103
SEMICOLON            : 1 7 25 39 42 95 103
STRING               : 15
VAR                  : 5 23
WHILE                : 94
error                : 

Nonterminals, with rules where they appear

addProcDirectoryFunc : 86
addProcedureDir      : 1
addTypeGlobal        : 7
addTypeGlobalMain    : 25
addVariableDir       : 9
addVariableDirMain   : 27
ambAuxArgumentos1    : 100
ambAuxEscritura1     : 43
ambAuxParametros     : 91
ambAuxTipo1          : 13 14 15 16 17
ambCicloTermino      : 66
ambExp               : 60
ambIdVars            : 9
ambIdVarsMain        : 27
argumentos           : 96
asignacion           : 33
auxArgumentos1       : 98 101
auxAsignacion1       : 39
auxCondicion         : 56
auxEscritura1        : 42 44
auxEscritura2        : 43
auxExp               : 61 73
auxExpresion         : 48
auxFactor            : 72
auxFunction          : 86
auxLlamada           : 95
auxParametros        : 90 92
auxTermino           : 67
auxVar1              : 5
auxVar1Main          : 23
auxVarcte            : 75
bloque               : 1 56 57 86 94
ciclo                : 38
cicloBloque          : 20 31
cicloExp             : 59 61
cicloFuncion         : 1 84
cicloTermino         : 65 67
cicloVars            : 1 3
cicloVarsMain        : 20 21
condicion            : 34
createVariableDir    : 5
createVariableDirMain : 23
escritura            : 35
estatuto             : 31
exp                  : 39 40 46 48 48 71 81 82 100
expresion            : 56 94
factor               : 66
funcion              : 84
idVars               : 7 11
idVarsMain           : 25 29
lectura              : 36
llamada              : 37
parametros           : 88
programa             : 0
termino              : 60
tipo                 : 7 25 86 91
varcte               : 72
vars                 : 3
varsMain             : 21

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID addProcedureDir SEMICOLON cicloVars cicloFuncion MAIN bloque

    PROGRAM         shift and go to state 1

    programa                       shift and go to state 2

state 1

    (1) programa -> PROGRAM . ID addProcedureDir SEMICOLON cicloVars cicloFuncion MAIN bloque

    ID              shift and go to state 3


state 2

    (0) S' -> programa .



state 3

    (1) programa -> PROGRAM ID . addProcedureDir SEMICOLON cicloVars cicloFuncion MAIN bloque
    (2) addProcedureDir -> .

    SEMICOLON       reduce using rule 2 (addProcedureDir -> .)

    addProcedureDir                shift and go to state 4

state 4

    (1) programa -> PROGRAM ID addProcedureDir . SEMICOLON cicloVars cicloFuncion MAIN bloque

    SEMICOLON       shift and go to state 5


state 5

    (1) programa -> PROGRAM ID addProcedureDir SEMICOLON . cicloVars cicloFuncion MAIN bloque
    (3) cicloVars -> . vars cicloVars
    (4) cicloVars -> .
    (5) vars -> . createVariableDir VAR auxVar1
    (6) createVariableDir -> .

    FUNCTION        reduce using rule 4 (cicloVars -> .)
    MAIN            reduce using rule 4 (cicloVars -> .)
    VAR             reduce using rule 6 (createVariableDir -> .)

    vars                           shift and go to state 6
    cicloVars                      shift and go to state 7
    createVariableDir              shift and go to state 8

state 6

    (3) cicloVars -> vars . cicloVars
    (3) cicloVars -> . vars cicloVars
    (4) cicloVars -> .
    (5) vars -> . createVariableDir VAR auxVar1
    (6) createVariableDir -> .

    FUNCTION        reduce using rule 4 (cicloVars -> .)
    MAIN            reduce using rule 4 (cicloVars -> .)
    VAR             reduce using rule 6 (createVariableDir -> .)

    createVariableDir              shift and go to state 8
    cicloVars                      shift and go to state 9
    vars                           shift and go to state 6

state 7

    (1) programa -> PROGRAM ID addProcedureDir SEMICOLON cicloVars . cicloFuncion MAIN bloque
    (84) cicloFuncion -> . funcion cicloFuncion
    (85) cicloFuncion -> .
    (86) funcion -> . FUNCTION tipo ID addProcDirectoryFunc LPAREN auxFunction RPAREN bloque

    MAIN            reduce using rule 85 (cicloFuncion -> .)
    FUNCTION        shift and go to state 10

    cicloFuncion                   shift and go to state 11
    funcion                        shift and go to state 12

state 8

    (5) vars -> createVariableDir . VAR auxVar1

    VAR             shift and go to state 13


state 9

    (3) cicloVars -> vars cicloVars .

    FUNCTION        reduce using rule 3 (cicloVars -> vars cicloVars .)
    MAIN            reduce using rule 3 (cicloVars -> vars cicloVars .)


state 10

    (86) funcion -> FUNCTION . tipo ID addProcDirectoryFunc LPAREN auxFunction RPAREN bloque
    (13) tipo -> . INT ambAuxTipo1
    (14) tipo -> . BOOL ambAuxTipo1
    (15) tipo -> . STRING ambAuxTipo1
    (16) tipo -> . FLOAT ambAuxTipo1
    (17) tipo -> . CHAR ambAuxTipo1

    INT             shift and go to state 16
    BOOL            shift and go to state 19
    STRING          shift and go to state 14
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18

    tipo                           shift and go to state 15

state 11

    (1) programa -> PROGRAM ID addProcedureDir SEMICOLON cicloVars cicloFuncion . MAIN bloque

    MAIN            shift and go to state 20


state 12

    (84) cicloFuncion -> funcion . cicloFuncion
    (84) cicloFuncion -> . funcion cicloFuncion
    (85) cicloFuncion -> .
    (86) funcion -> . FUNCTION tipo ID addProcDirectoryFunc LPAREN auxFunction RPAREN bloque

    MAIN            reduce using rule 85 (cicloFuncion -> .)
    FUNCTION        shift and go to state 10

    cicloFuncion                   shift and go to state 21
    funcion                        shift and go to state 12

state 13

    (5) vars -> createVariableDir VAR . auxVar1
    (7) auxVar1 -> . idVars COLON tipo addTypeGlobal SEMICOLON
    (9) idVars -> . ID addVariableDir ambIdVars

    ID              shift and go to state 24

    idVars                         shift and go to state 22
    auxVar1                        shift and go to state 23

state 14

    (15) tipo -> STRING . ambAuxTipo1
    (18) ambAuxTipo1 -> . LBRACKET CTEINT RBRACKET
    (19) ambAuxTipo1 -> .

    LBRACKET        shift and go to state 25
    ID              reduce using rule 19 (ambAuxTipo1 -> .)
    SEMICOLON       reduce using rule 19 (ambAuxTipo1 -> .)

    ambAuxTipo1                    shift and go to state 26

state 15

    (86) funcion -> FUNCTION tipo . ID addProcDirectoryFunc LPAREN auxFunction RPAREN bloque

    ID              shift and go to state 27


state 16

    (13) tipo -> INT . ambAuxTipo1
    (18) ambAuxTipo1 -> . LBRACKET CTEINT RBRACKET
    (19) ambAuxTipo1 -> .

    LBRACKET        shift and go to state 25
    ID              reduce using rule 19 (ambAuxTipo1 -> .)
    SEMICOLON       reduce using rule 19 (ambAuxTipo1 -> .)

    ambAuxTipo1                    shift and go to state 28

state 17

    (16) tipo -> FLOAT . ambAuxTipo1
    (18) ambAuxTipo1 -> . LBRACKET CTEINT RBRACKET
    (19) ambAuxTipo1 -> .

    LBRACKET        shift and go to state 25
    ID              reduce using rule 19 (ambAuxTipo1 -> .)
    SEMICOLON       reduce using rule 19 (ambAuxTipo1 -> .)

    ambAuxTipo1                    shift and go to state 29

state 18

    (17) tipo -> CHAR . ambAuxTipo1
    (18) ambAuxTipo1 -> . LBRACKET CTEINT RBRACKET
    (19) ambAuxTipo1 -> .

    LBRACKET        shift and go to state 25
    ID              reduce using rule 19 (ambAuxTipo1 -> .)
    SEMICOLON       reduce using rule 19 (ambAuxTipo1 -> .)

    ambAuxTipo1                    shift and go to state 30

state 19

    (14) tipo -> BOOL . ambAuxTipo1
    (18) ambAuxTipo1 -> . LBRACKET CTEINT RBRACKET
    (19) ambAuxTipo1 -> .

    LBRACKET        shift and go to state 25
    ID              reduce using rule 19 (ambAuxTipo1 -> .)
    SEMICOLON       reduce using rule 19 (ambAuxTipo1 -> .)

    ambAuxTipo1                    shift and go to state 31

state 20

    (1) programa -> PROGRAM ID addProcedureDir SEMICOLON cicloVars cicloFuncion MAIN . bloque
    (20) bloque -> . LBRACE cicloVarsMain cicloBloque RBRACE

    LBRACE          shift and go to state 32

    bloque                         shift and go to state 33

state 21

    (84) cicloFuncion -> funcion cicloFuncion .

    MAIN            reduce using rule 84 (cicloFuncion -> funcion cicloFuncion .)


state 22

    (7) auxVar1 -> idVars . COLON tipo addTypeGlobal SEMICOLON

    COLON           shift and go to state 34


state 23

    (5) vars -> createVariableDir VAR auxVar1 .

    VAR             reduce using rule 5 (vars -> createVariableDir VAR auxVar1 .)
    FUNCTION        reduce using rule 5 (vars -> createVariableDir VAR auxVar1 .)
    MAIN            reduce using rule 5 (vars -> createVariableDir VAR auxVar1 .)


state 24

    (9) idVars -> ID . addVariableDir ambIdVars
    (10) addVariableDir -> .

    COMMA           reduce using rule 10 (addVariableDir -> .)
    COLON           reduce using rule 10 (addVariableDir -> .)

    addVariableDir                 shift and go to state 35

state 25

    (18) ambAuxTipo1 -> LBRACKET . CTEINT RBRACKET

    CTEINT          shift and go to state 36


state 26

    (15) tipo -> STRING ambAuxTipo1 .

    ID              reduce using rule 15 (tipo -> STRING ambAuxTipo1 .)
    SEMICOLON       reduce using rule 15 (tipo -> STRING ambAuxTipo1 .)


state 27

    (86) funcion -> FUNCTION tipo ID . addProcDirectoryFunc LPAREN auxFunction RPAREN bloque
    (87) addProcDirectoryFunc -> .

    LPAREN          reduce using rule 87 (addProcDirectoryFunc -> .)

    addProcDirectoryFunc           shift and go to state 37

state 28

    (13) tipo -> INT ambAuxTipo1 .

    ID              reduce using rule 13 (tipo -> INT ambAuxTipo1 .)
    SEMICOLON       reduce using rule 13 (tipo -> INT ambAuxTipo1 .)


state 29

    (16) tipo -> FLOAT ambAuxTipo1 .

    ID              reduce using rule 16 (tipo -> FLOAT ambAuxTipo1 .)
    SEMICOLON       reduce using rule 16 (tipo -> FLOAT ambAuxTipo1 .)


state 30

    (17) tipo -> CHAR ambAuxTipo1 .

    ID              reduce using rule 17 (tipo -> CHAR ambAuxTipo1 .)
    SEMICOLON       reduce using rule 17 (tipo -> CHAR ambAuxTipo1 .)


state 31

    (14) tipo -> BOOL ambAuxTipo1 .

    ID              reduce using rule 14 (tipo -> BOOL ambAuxTipo1 .)
    SEMICOLON       reduce using rule 14 (tipo -> BOOL ambAuxTipo1 .)


state 32

    (20) bloque -> LBRACE . cicloVarsMain cicloBloque RBRACE
    (21) cicloVarsMain -> . varsMain cicloVarsMain
    (22) cicloVarsMain -> .
    (23) varsMain -> . createVariableDirMain VAR auxVar1Main
    (24) createVariableDirMain -> .

    ID              reduce using rule 22 (cicloVarsMain -> .)
    IF              reduce using rule 22 (cicloVarsMain -> .)
    PRINT           reduce using rule 22 (cicloVarsMain -> .)
    READ            reduce using rule 22 (cicloVarsMain -> .)
    WHILE           reduce using rule 22 (cicloVarsMain -> .)
    RBRACE          reduce using rule 22 (cicloVarsMain -> .)
    VAR             reduce using rule 24 (createVariableDirMain -> .)

    cicloVarsMain                  shift and go to state 39
    createVariableDirMain          shift and go to state 38
    varsMain                       shift and go to state 40

state 33

    (1) programa -> PROGRAM ID addProcedureDir SEMICOLON cicloVars cicloFuncion MAIN bloque .

    $end            reduce using rule 1 (programa -> PROGRAM ID addProcedureDir SEMICOLON cicloVars cicloFuncion MAIN bloque .)


state 34

    (7) auxVar1 -> idVars COLON . tipo addTypeGlobal SEMICOLON
    (13) tipo -> . INT ambAuxTipo1
    (14) tipo -> . BOOL ambAuxTipo1
    (15) tipo -> . STRING ambAuxTipo1
    (16) tipo -> . FLOAT ambAuxTipo1
    (17) tipo -> . CHAR ambAuxTipo1

    INT             shift and go to state 16
    BOOL            shift and go to state 19
    STRING          shift and go to state 14
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18

    tipo                           shift and go to state 41

state 35

    (9) idVars -> ID addVariableDir . ambIdVars
    (11) ambIdVars -> . COMMA idVars
    (12) ambIdVars -> .

    COMMA           shift and go to state 43
    COLON           reduce using rule 12 (ambIdVars -> .)

    ambIdVars                      shift and go to state 42

state 36

    (18) ambAuxTipo1 -> LBRACKET CTEINT . RBRACKET

    RBRACKET        shift and go to state 44


state 37

    (86) funcion -> FUNCTION tipo ID addProcDirectoryFunc . LPAREN auxFunction RPAREN bloque

    LPAREN          shift and go to state 45


state 38

    (23) varsMain -> createVariableDirMain . VAR auxVar1Main

    VAR             shift and go to state 46


state 39

    (20) bloque -> LBRACE cicloVarsMain . cicloBloque RBRACE
    (31) cicloBloque -> . estatuto cicloBloque
    (32) cicloBloque -> .
    (33) estatuto -> . asignacion
    (34) estatuto -> . condicion
    (35) estatuto -> . escritura
    (36) estatuto -> . lectura
    (37) estatuto -> . llamada
    (38) estatuto -> . ciclo
    (39) asignacion -> . ID auxAsignacion1 EQUALA exp SEMICOLON
    (56) condicion -> . IF LPAREN expresion RPAREN bloque auxCondicion
    (42) escritura -> . PRINT LPAREN auxEscritura1 RPAREN SEMICOLON
    (103) lectura -> . READ LPAREN ID RPAREN SEMICOLON
    (95) llamada -> . ID LPAREN auxLlamada RPAREN SEMICOLON
    (94) ciclo -> . WHILE LPAREN expresion RPAREN bloque

    RBRACE          reduce using rule 32 (cicloBloque -> .)
    ID              shift and go to state 57
    IF              shift and go to state 54
    PRINT           shift and go to state 48
    READ            shift and go to state 47
    WHILE           shift and go to state 49

    ciclo                          shift and go to state 50
    asignacion                     shift and go to state 58
    estatuto                       shift and go to state 51
    llamada                        shift and go to state 52
    condicion                      shift and go to state 53
    cicloBloque                    shift and go to state 56
    lectura                        shift and go to state 55
    escritura                      shift and go to state 59

state 40

    (21) cicloVarsMain -> varsMain . cicloVarsMain
    (21) cicloVarsMain -> . varsMain cicloVarsMain
    (22) cicloVarsMain -> .
    (23) varsMain -> . createVariableDirMain VAR auxVar1Main
    (24) createVariableDirMain -> .

    ID              reduce using rule 22 (cicloVarsMain -> .)
    IF              reduce using rule 22 (cicloVarsMain -> .)
    PRINT           reduce using rule 22 (cicloVarsMain -> .)
    READ            reduce using rule 22 (cicloVarsMain -> .)
    WHILE           reduce using rule 22 (cicloVarsMain -> .)
    RBRACE          reduce using rule 22 (cicloVarsMain -> .)
    VAR             reduce using rule 24 (createVariableDirMain -> .)

    cicloVarsMain                  shift and go to state 60
    createVariableDirMain          shift and go to state 38
    varsMain                       shift and go to state 40

state 41

    (7) auxVar1 -> idVars COLON tipo . addTypeGlobal SEMICOLON
    (8) addTypeGlobal -> .

    SEMICOLON       reduce using rule 8 (addTypeGlobal -> .)

    addTypeGlobal                  shift and go to state 61

state 42

    (9) idVars -> ID addVariableDir ambIdVars .

    COLON           reduce using rule 9 (idVars -> ID addVariableDir ambIdVars .)


state 43

    (11) ambIdVars -> COMMA . idVars
    (9) idVars -> . ID addVariableDir ambIdVars

    ID              shift and go to state 24

    idVars                         shift and go to state 62

state 44

    (18) ambAuxTipo1 -> LBRACKET CTEINT RBRACKET .

    ID              reduce using rule 18 (ambAuxTipo1 -> LBRACKET CTEINT RBRACKET .)
    SEMICOLON       reduce using rule 18 (ambAuxTipo1 -> LBRACKET CTEINT RBRACKET .)


state 45

    (86) funcion -> FUNCTION tipo ID addProcDirectoryFunc LPAREN . auxFunction RPAREN bloque
    (88) auxFunction -> . parametros
    (89) auxFunction -> .
    (90) parametros -> . auxParametros
    (91) auxParametros -> . tipo ID ambAuxParametros
    (13) tipo -> . INT ambAuxTipo1
    (14) tipo -> . BOOL ambAuxTipo1
    (15) tipo -> . STRING ambAuxTipo1
    (16) tipo -> . FLOAT ambAuxTipo1
    (17) tipo -> . CHAR ambAuxTipo1

    RPAREN          reduce using rule 89 (auxFunction -> .)
    INT             shift and go to state 16
    BOOL            shift and go to state 19
    STRING          shift and go to state 14
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18

    tipo                           shift and go to state 63
    auxFunction                    shift and go to state 64
    auxParametros                  shift and go to state 65
    parametros                     shift and go to state 66

state 46

    (23) varsMain -> createVariableDirMain VAR . auxVar1Main
    (25) auxVar1Main -> . idVarsMain COLON tipo addTypeGlobalMain SEMICOLON
    (27) idVarsMain -> . ID addVariableDirMain ambIdVarsMain

    ID              shift and go to state 69

    auxVar1Main                    shift and go to state 67
    idVarsMain                     shift and go to state 68

state 47

    (103) lectura -> READ . LPAREN ID RPAREN SEMICOLON

    LPAREN          shift and go to state 70


state 48

    (42) escritura -> PRINT . LPAREN auxEscritura1 RPAREN SEMICOLON

    LPAREN          shift and go to state 71


state 49

    (94) ciclo -> WHILE . LPAREN expresion RPAREN bloque

    LPAREN          shift and go to state 72


state 50

    (38) estatuto -> ciclo .

    ID              reduce using rule 38 (estatuto -> ciclo .)
    IF              reduce using rule 38 (estatuto -> ciclo .)
    PRINT           reduce using rule 38 (estatuto -> ciclo .)
    READ            reduce using rule 38 (estatuto -> ciclo .)
    WHILE           reduce using rule 38 (estatuto -> ciclo .)
    RBRACE          reduce using rule 38 (estatuto -> ciclo .)


state 51

    (31) cicloBloque -> estatuto . cicloBloque
    (31) cicloBloque -> . estatuto cicloBloque
    (32) cicloBloque -> .
    (33) estatuto -> . asignacion
    (34) estatuto -> . condicion
    (35) estatuto -> . escritura
    (36) estatuto -> . lectura
    (37) estatuto -> . llamada
    (38) estatuto -> . ciclo
    (39) asignacion -> . ID auxAsignacion1 EQUALA exp SEMICOLON
    (56) condicion -> . IF LPAREN expresion RPAREN bloque auxCondicion
    (42) escritura -> . PRINT LPAREN auxEscritura1 RPAREN SEMICOLON
    (103) lectura -> . READ LPAREN ID RPAREN SEMICOLON
    (95) llamada -> . ID LPAREN auxLlamada RPAREN SEMICOLON
    (94) ciclo -> . WHILE LPAREN expresion RPAREN bloque

    RBRACE          reduce using rule 32 (cicloBloque -> .)
    ID              shift and go to state 57
    IF              shift and go to state 54
    PRINT           shift and go to state 48
    READ            shift and go to state 47
    WHILE           shift and go to state 49

    ciclo                          shift and go to state 50
    asignacion                     shift and go to state 58
    estatuto                       shift and go to state 51
    llamada                        shift and go to state 52
    condicion                      shift and go to state 53
    cicloBloque                    shift and go to state 73
    lectura                        shift and go to state 55
    escritura                      shift and go to state 59

state 52

    (37) estatuto -> llamada .

    ID              reduce using rule 37 (estatuto -> llamada .)
    IF              reduce using rule 37 (estatuto -> llamada .)
    PRINT           reduce using rule 37 (estatuto -> llamada .)
    READ            reduce using rule 37 (estatuto -> llamada .)
    WHILE           reduce using rule 37 (estatuto -> llamada .)
    RBRACE          reduce using rule 37 (estatuto -> llamada .)


state 53

    (34) estatuto -> condicion .

    ID              reduce using rule 34 (estatuto -> condicion .)
    IF              reduce using rule 34 (estatuto -> condicion .)
    PRINT           reduce using rule 34 (estatuto -> condicion .)
    READ            reduce using rule 34 (estatuto -> condicion .)
    WHILE           reduce using rule 34 (estatuto -> condicion .)
    RBRACE          reduce using rule 34 (estatuto -> condicion .)


state 54

    (56) condicion -> IF . LPAREN expresion RPAREN bloque auxCondicion

    LPAREN          shift and go to state 74


state 55

    (36) estatuto -> lectura .

    ID              reduce using rule 36 (estatuto -> lectura .)
    IF              reduce using rule 36 (estatuto -> lectura .)
    PRINT           reduce using rule 36 (estatuto -> lectura .)
    READ            reduce using rule 36 (estatuto -> lectura .)
    WHILE           reduce using rule 36 (estatuto -> lectura .)
    RBRACE          reduce using rule 36 (estatuto -> lectura .)


state 56

    (20) bloque -> LBRACE cicloVarsMain cicloBloque . RBRACE

    RBRACE          shift and go to state 75


state 57

    (39) asignacion -> ID . auxAsignacion1 EQUALA exp SEMICOLON
    (95) llamada -> ID . LPAREN auxLlamada RPAREN SEMICOLON
    (40) auxAsignacion1 -> . LBRACKET exp RBRACKET
    (41) auxAsignacion1 -> .

    LPAREN          shift and go to state 78
    LBRACKET        shift and go to state 76
    EQUALA          reduce using rule 41 (auxAsignacion1 -> .)

    auxAsignacion1                 shift and go to state 77

state 58

    (33) estatuto -> asignacion .

    ID              reduce using rule 33 (estatuto -> asignacion .)
    IF              reduce using rule 33 (estatuto -> asignacion .)
    PRINT           reduce using rule 33 (estatuto -> asignacion .)
    READ            reduce using rule 33 (estatuto -> asignacion .)
    WHILE           reduce using rule 33 (estatuto -> asignacion .)
    RBRACE          reduce using rule 33 (estatuto -> asignacion .)


state 59

    (35) estatuto -> escritura .

    ID              reduce using rule 35 (estatuto -> escritura .)
    IF              reduce using rule 35 (estatuto -> escritura .)
    PRINT           reduce using rule 35 (estatuto -> escritura .)
    READ            reduce using rule 35 (estatuto -> escritura .)
    WHILE           reduce using rule 35 (estatuto -> escritura .)
    RBRACE          reduce using rule 35 (estatuto -> escritura .)


state 60

    (21) cicloVarsMain -> varsMain cicloVarsMain .

    ID              reduce using rule 21 (cicloVarsMain -> varsMain cicloVarsMain .)
    IF              reduce using rule 21 (cicloVarsMain -> varsMain cicloVarsMain .)
    PRINT           reduce using rule 21 (cicloVarsMain -> varsMain cicloVarsMain .)
    READ            reduce using rule 21 (cicloVarsMain -> varsMain cicloVarsMain .)
    WHILE           reduce using rule 21 (cicloVarsMain -> varsMain cicloVarsMain .)
    RBRACE          reduce using rule 21 (cicloVarsMain -> varsMain cicloVarsMain .)


state 61

    (7) auxVar1 -> idVars COLON tipo addTypeGlobal . SEMICOLON

    SEMICOLON       shift and go to state 79


state 62

    (11) ambIdVars -> COMMA idVars .

    COLON           reduce using rule 11 (ambIdVars -> COMMA idVars .)


state 63

    (91) auxParametros -> tipo . ID ambAuxParametros

    ID              shift and go to state 80


state 64

    (86) funcion -> FUNCTION tipo ID addProcDirectoryFunc LPAREN auxFunction . RPAREN bloque

    RPAREN          shift and go to state 81


state 65

    (90) parametros -> auxParametros .

    RPAREN          reduce using rule 90 (parametros -> auxParametros .)


state 66

    (88) auxFunction -> parametros .

    RPAREN          reduce using rule 88 (auxFunction -> parametros .)


state 67

    (23) varsMain -> createVariableDirMain VAR auxVar1Main .

    VAR             reduce using rule 23 (varsMain -> createVariableDirMain VAR auxVar1Main .)
    ID              reduce using rule 23 (varsMain -> createVariableDirMain VAR auxVar1Main .)
    IF              reduce using rule 23 (varsMain -> createVariableDirMain VAR auxVar1Main .)
    PRINT           reduce using rule 23 (varsMain -> createVariableDirMain VAR auxVar1Main .)
    READ            reduce using rule 23 (varsMain -> createVariableDirMain VAR auxVar1Main .)
    WHILE           reduce using rule 23 (varsMain -> createVariableDirMain VAR auxVar1Main .)
    RBRACE          reduce using rule 23 (varsMain -> createVariableDirMain VAR auxVar1Main .)


state 68

    (25) auxVar1Main -> idVarsMain . COLON tipo addTypeGlobalMain SEMICOLON

    COLON           shift and go to state 82


state 69

    (27) idVarsMain -> ID . addVariableDirMain ambIdVarsMain
    (28) addVariableDirMain -> .

    COMMA           reduce using rule 28 (addVariableDirMain -> .)
    COLON           reduce using rule 28 (addVariableDirMain -> .)

    addVariableDirMain             shift and go to state 83

state 70

    (103) lectura -> READ LPAREN . ID RPAREN SEMICOLON

    ID              shift and go to state 84


state 71

    (42) escritura -> PRINT LPAREN . auxEscritura1 RPAREN SEMICOLON
    (43) auxEscritura1 -> . auxEscritura2 ambAuxEscritura1
    (46) auxEscritura2 -> . exp
    (47) auxEscritura2 -> . CTESTRING
    (59) exp -> . cicloExp
    (60) cicloExp -> . termino ambExp
    (65) termino -> . cicloTermino
    (66) cicloTermino -> . factor ambCicloTermino
    (71) factor -> . LPAREN exp RPAREN
    (72) factor -> . auxFactor varcte
    (73) auxFactor -> . auxExp
    (74) auxFactor -> .
    (63) auxExp -> . PLUS
    (64) auxExp -> . MINUS

  ! shift/reduce conflict for CTESTRING resolved as shift
    CTESTRING       shift and go to state 93
    LPAREN          shift and go to state 91
    ID              reduce using rule 74 (auxFactor -> .)
    CTEINT          reduce using rule 74 (auxFactor -> .)
    CTEFLOAT        reduce using rule 74 (auxFactor -> .)
    CTECHAR         reduce using rule 74 (auxFactor -> .)
    CTEBOOL         reduce using rule 74 (auxFactor -> .)
    PLUS            shift and go to state 89
    MINUS           shift and go to state 95

  ! CTESTRING       [ reduce using rule 74 (auxFactor -> .) ]

    auxEscritura1                  shift and go to state 86
    auxEscritura2                  shift and go to state 87
    auxExp                         shift and go to state 88
    termino                        shift and go to state 90
    exp                            shift and go to state 85
    factor                         shift and go to state 92
    auxFactor                      shift and go to state 94
    cicloExp                       shift and go to state 96
    cicloTermino                   shift and go to state 97

state 72
